--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "mapbox-gl": "^2.14.1",
     "next": "^12.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
