--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.22",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.1"
   }
 }
