--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-map-gl": "^7.0.23"
+    "react-map-gl": "^7.0.23",
+    "react-tabs": "^6.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
