--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.23",
-    "react-tabs": "^6.0.1"
+    "react-tabs": "^6.0.1",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.22",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.1"
+    "prettier": "^2.8.8"
   }
 }
