--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.13",
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.22",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3"
   }
 }
